@@ -5,6 +5,7 @@ import com.iis.PetClinic.dto.request.PriceListDTO;
 import com.iis.PetClinic.dto.request.PriceListItemDTO;
 import com.iis.PetClinic.dto.request.PublishPriceListRequest;
 import com.iis.PetClinic.model.PriceList;
+import com.iis.PetClinic.model.PriceListItem;
 import com.iis.PetClinic.repository.IPriceListRepository;
 import com.iis.PetClinic.service.impl.PriceListVersioningService;
 import lombok.RequiredArgsConstructor;
@@ -51,6 +52,17 @@ public class PriceListController {
         PriceList published = versioningService.publishDraft(draftId, req.getEffectiveFrom());
         return ResponseEntity.ok(toDTO(published));
     }
+    @PutMapping("/activate/{id}")
+    public ResponseEntity<String> activatePriceList(@PathVariable Long id) {
+        try {
+            versioningService.activatePriceList(id);
+            return ResponseEntity.ok("Price list " + id + " successfully activated.");
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
+        } catch (Exception e) {
+            return ResponseEntity.internalServerError().body("Unexpected error occurred: " + e.getMessage());
+        }
+    }
 
     // 3) Vratiti cenu usluge u trenutku "at"
     @GetMapping("/price")
@@ -62,8 +74,11 @@ public class PriceListController {
         return ResponseEntity.ok(versioningService.getPriceAt(serviceId, at));
     }
 
-    // --- Mapperi (brzi manualni) ---
+
+
     private PriceListDTO toDTO(PriceList e) {
+        var items = (e.getItems() == null) ? java.util.List.<PriceListItem>of() : e.getItems();
+
         return PriceListDTO.builder()
                 .id(e.getId())
                 .name(e.getName())
@@ -72,15 +87,31 @@ public class PriceListController {
                 .validFrom(e.getValidFrom())
                 .validTo(e.getValidTo())
                 .items(
-                        e.getItems().stream()
+                        items.stream()
                                 .map(it -> PriceListItemDTO.builder()
                                         .id(it.getId())
                                         .serviceId(it.getService().getId())
                                         .serviceName(it.getService().getName())
                                         .price(it.getPrice())
                                         .build())
-                                .collect(Collectors.toList())
+                                .toList()
                 )
                 .build();
     }
+
+    @GetMapping("/drafts")
+    public ResponseEntity<java.util.List<PriceListDTO>> getDrafts(
+            @RequestParam(defaultValue = "true") boolean includeItems
+    ) {
+        var drafts = includeItems
+                ? priceListRepo.findDraftsWithItems()
+                : priceListRepo.findByStatusOrderByVersionDesc(com.iis.PetClinic.model.PriceListStatus.DRAFT);
+
+        var dtos = drafts.stream()
+                .map(this::toDTO)
+                .toList();
+
+        return ResponseEntity.ok(dtos);
+    }
+
 }
